[gd_scene load_steps=3 format=3 uid="uid://b0264hppvh7ir"]

[ext_resource type="Script" path="res://skills/abilites/aura_of_courage.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dco3u1ib8supg" path="res://assets/ui/abilities/aura_of_courage_small.png" id="2"]

[node name="aura_of_courage" type="Node"]
script = ExtResource("1")
icon = ExtResource("2")

[node name="update_timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="update_timer" to="." method="_on_update_timer_timeout"]
